--- a/5gprod/5gprod.ipynb
+++ b/5gprod/5gprod.ipynb
@@ -113,11 +113,11 @@
      "output_type": "stream",
      "text": [
       "                   timestamp  http_connectivity  cpu_utilization  \\\n",
-      "0 2025-01-13 10:23:31.133476              False            False   \n",
-      "1 2025-01-13 10:24:31.133476              False            False   \n",
-      "2 2025-01-13 10:25:31.133476              False            False   \n",
-      "3 2025-01-13 10:26:31.133476              False            False   \n",
-      "4 2025-01-13 10:27:31.133476              False            False   \n",
+      "0 2025-01-16 12:01:55.775630              False            False   \n",
+      "1 2025-01-16 12:02:55.775630              False            False   \n",
+      "2 2025-01-16 12:03:55.775630              False            False   \n",
+      "3 2025-01-16 12:04:55.775630              False            False   \n",
+      "4 2025-01-16 12:05:55.775630              False            False   \n",
       "\n",
       "   memory_utilization  registration_rate  session_setup_rate  \\\n",
       "0               False              False               False   \n",
@@ -140,11 +140,11 @@
       "3                         False                      False              False  \n",
       "4                         False                      False              False  \n",
       "                   timestamp  cpu_utilization  memory_utilization  \\\n",
-      "0 2025-01-13 10:23:31.133476            False               False   \n",
-      "1 2025-01-13 10:24:31.133476            False               False   \n",
-      "2 2025-01-13 10:25:31.133476            False               False   \n",
-      "3 2025-01-13 10:26:31.133476            False               False   \n",
-      "4 2025-01-13 10:27:31.133476            False               False   \n",
+      "0 2025-01-16 12:01:55.775630            False               False   \n",
+      "1 2025-01-16 12:02:55.775630            False               False   \n",
+      "2 2025-01-16 12:03:55.775630            False               False   \n",
+      "3 2025-01-16 12:04:55.775630            False               False   \n",
+      "4 2025-01-16 12:05:55.775630            False               False   \n",
       "\n",
       "   session_establishment_rate  n4_message_rate  session_modification_rate  \\\n",
       "0                       False            False                      False   \n",
@@ -160,11 +160,11 @@
       "3                     False              False                 False  \n",
       "4                     False              False                 False  \n",
       "                   timestamp  cpu_utilization  memory_utilization  \\\n",
-      "0 2025-01-13 10:23:31.133476            False               False   \n",
-      "1 2025-01-13 10:24:31.133476            False               False   \n",
-      "2 2025-01-13 10:25:31.133476            False               False   \n",
-      "3 2025-01-13 10:26:31.133476            False               False   \n",
-      "4 2025-01-13 10:27:31.133476            False               False   \n",
+      "0 2025-01-16 12:01:55.775630            False               False   \n",
+      "1 2025-01-16 12:02:55.775630            False               False   \n",
+      "2 2025-01-16 12:03:55.775630            False               False   \n",
+      "3 2025-01-16 12:04:55.775630            False               False   \n",
+      "4 2025-01-16 12:05:55.775630            False               False   \n",
       "\n",
       "   packet_processing_rate  tunnel_establishment_rate  buffer_utilization  \\\n",
       "0                   False                      False               False   \n",
@@ -239,41 +239,27 @@
      "output_type": "stream",
      "text": [
       "                     timestamp  http_connectivity  cpu_utilization_smf_amf  \\\n",
-      "181 2025-01-13 13:24:31.133476               True                    False   \n",
-      "182 2025-01-13 13:25:31.133476               True                    False   \n",
-      "183 2025-01-13 13:26:31.133476               True                    False   \n",
+      "885 2025-01-17 02:46:55.775630              False                    False   \n",
       "\n",
       "     memory_utilization_smf_amf  registration_rate  session_setup_rate  \\\n",
-      "181                       False              False               False   \n",
-      "182                       False              False               False   \n",
-      "183                       False              False               False   \n",
+      "885                       False              False               False   \n",
       "\n",
       "     authentication_success_rate  n1n2_message_rate  \\\n",
-      "181                        False              False   \n",
-      "182                        False              False   \n",
-      "183                        False              False   \n",
+      "885                        False              False   \n",
       "\n",
       "     registration_success_rate  slice_selection_success_rate  ...  \\\n",
-      "181                      False                         False  ...   \n",
-      "182                      False                         False  ...   \n",
-      "183                      False                         False  ...   \n",
+      "885                      False                         False  ...   \n",
       "\n",
       "     cpu_utilization  memory_utilization  packet_processing_rate  \\\n",
-      "181            False               False                   False   \n",
-      "182            False               False                   False   \n",
-      "183            False               False                   False   \n",
+      "885            False               False                   False   \n",
       "\n",
       "     tunnel_establishment_rate  buffer_utilization  qos_flow_success_rate  \\\n",
-      "181                      False               False                  False   \n",
-      "182                      False               False                  False   \n",
-      "183                      False               False                  False   \n",
+      "885                      False               False                  False   \n",
       "\n",
       "     throughput_mbps  packet_drop_rate  latency_ms  combined_anomaly  \n",
-      "181            False             False       False              True  \n",
-      "182            False             False       False              True  \n",
-      "183            False             False       False              True  \n",
+      "885            False             False        True              True  \n",
       "\n",
-      "[3 rows x 30 columns]\n"
+      "[1 rows x 30 columns]\n"
      ]
     }
    ],
@@ -370,15 +356,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided anomalies and system logs, the root cause of the anomalies seems to be related to the 'cpu_utilization_smf_amf' metric. This metric is showing as 'False' during the timestamps where anomalies are detected. \n",
+      "Based on the provided logs, the anomaly detected is related to the latency_ms metric, which is a measure of the delay in data transmission. This metric is flagged as True in the anomaly column, indicating that there is an issue with the latency in the system.\n",
       "\n",
-      "The 'cpu_utilization_smf_amf' metric is likely indicating the CPU utilization of the Session Management Function (SMF) and Access and Mobility Management Function (AMF) components of the system. A 'False' value for this metric could indicate that the CPU utilization is exceeding a certain threshold or that there is an issue with the CPU utilization monitoring itself.\n",
+      "Looking at the relevant UPF metrics information, we can see that the latency_ms value has increased from 13.37484865015994 at 09:46:55.775630 to 13.86797014781209 at 11:17:55.775630. This increase in latency could be due to several reasons such as network congestion, hardware issues, or software issues.\n",
       "\n",
-      "Looking at the relevant AMF and SMF metrics information, we can see that the CPU utilization values are fluctuating. For example, the CPU utilization for AMF at '2025-01-13 10:57:31.133476' is 37.088859726476, but at '2025-01-13 10:30:31.133476' it is 39.3344585640864. Similarly, for SMF, the CPU utilization at '2025-01-14 01:22:31.133476' is 35.751351937668645, but at '2025-01-14 03:06:31.133476' it is 23.301320436584884. \n",
+      "The CPU utilization and memory utilization have also increased during this time period. The CPU utilization has increased from 45.181238864488 to 50.542563686731 and the memory utilization has increased from 58.74739464810597 to 65.30386944707406. This increase in resource utilization could be contributing to the increased latency as the system may be struggling to process data efficiently due to the high resource usage.\n",
       "\n",
-      "These fluctuations in CPU utilization could be causing the anomalies detected in the system. The system might be experiencing periods of high CPU utilization, causing performance issues and triggering the anomaly detection.\n",
+      "The packet_processing_rate has decreased from 13404.863581966032 to 12357.272237015131, which could also be contributing to the increased latency. If the system is processing packets at a slower rate, this could lead to delays in data transmission.\n",
       "\n",
-      "To confirm this root cause, further investigation would be needed. This could include checking system logs for any error messages related to CPU utilization, examining the system's CPU usage patterns, and checking if there are any processes or applications that are using a high amount of CPU.\n"
+      "The buffer_utilization has also increased from 37.98646570464442 to 40.893310839631, indicating that the system is storing more data in the buffer. This could be a result of the system struggling to process data efficiently, leading to an increase in latency.\n",
+      "\n",
+      "In conclusion, the root cause of the anomaly in the latency_ms metric could be due to high CPU and memory utilization, a decrease in packet processing rate, and an increase in buffer utilization. Further investigation would be needed to determine the exact cause and to implement appropriate solutions.\n"
      ]
     }
    ],
@@ -456,15 +444,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided system logs, alerts, and metrics, the anomalies seem to be related to the following issues:\n",
+      "Based on the provided system logs and alerts, the anomalies in the metrics can be attributed to several issues affecting different components of the system. \n",
       "\n",
-      "1. SMF_CPU_OVERLOAD_CASCADE: This alert indicates that the Session Management Function (SMF) and Access and Mobility Management Function (AMF) components are experiencing a CPU overload. This is a critical issue as it can lead to performance degradation and service disruption. The root cause could be due to an increase in the number of sessions or a sudden surge in network traffic. The CPU utilization metrics for both SMF and AMF show high values, confirming the overload.\n",
+      "1. Registration Storm: Both the Access and Mobility Management Function (AMF) and Session Management Function (SMF) were affected by a registration storm. This is a situation where a large number of devices attempt to register with the network simultaneously, causing a surge in registration rate. This can lead to increased CPU and memory utilization as the system tries to process the high volume of registration requests. \n",
       "\n",
-      "2. UPF_DATAPATH_DEGRADATION: This alert indicates that the User Plane Function (UPF) and SMF components are experiencing datapath degradation. This is a major issue as it can affect the data flow in the network. The root cause could be due to issues in the network infrastructure such as faulty hardware or network congestion. The packet_processing_rate and tunnel_establishment_rate metrics for UPF show high values, indicating potential datapath issues.\n",
+      "2. Resource Exhaustion: Both the User Plane Function (UPF) and SMF experienced resource exhaustion. This indicates that these components were running out of resources, likely due to high demand. This can be seen in the increased CPU and memory utilization metrics for these components. \n",
       "\n",
-      "3. REGISTRATION_STORM: This alert indicates that the AMF and SMF components are affected by a registration storm. This is a critical issue as it can overload the network with unnecessary registration requests. The root cause could be due to a large number of devices trying to register to the network at the same time. The registration_rate metric for AMF shows high values, confirming the registration storm.\n",
+      "3. Session Management Failure: The AMF, SMF, and UPF all experienced session management failures. This suggests that there were issues with establishing, maintaining, or terminating sessions. This could be due to a variety of reasons, including network congestion, software bugs, or hardware failures. \n",
       "\n",
-      "In conclusion, the anomalies are likely caused by a combination of CPU overload, datapath degradation, and a registration storm. These issues can lead to network performance degradation and service disruption. Further investigation is needed to identify the exact causes and implement appropriate solutions.\n"
+      "4. Latency: The UPF experienced increased latency, as indicated by the 'True' value in the 'latency_ms' column of the anomalies table. This could be a result of the aforementioned issues, as increased CPU and memory utilization, as well as session management failures, can all contribute to increased latency. \n",
+      "\n",
+      "In conclusion, the root cause of the anomalies appears to be a combination of a registration storm, resource exhaustion, and session management failures, all of which led to increased CPU and memory utilization and increased latency. Further investigation would be needed to determine the exact cause of these issues and to develop appropriate solutions.\n"
      ]
     }
    ],
